--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,15 +17,14 @@
         android:theme="@style/AppTheme">
         <activity
             android:name="com.adamkis.pizza.ui.activity.MainActivity"
-            android:label="@string/app_name">
+            android:label="@string/main_title">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
         <activity
-            android:name="com.adamkis.pizza.ui.activity.PizzaDetailActivity"
-            android:theme="@style/AppTheme.NoActionBar"/>
+            android:name="com.adamkis.pizza.ui.activity.PizzaDetailActivity"/>
     </application>
 
 </manifest>
