--- a/app/build.gradle
+++ b/app/build.gradle
@@ -67,8 +67,11 @@ dependencies {
     // LeakCanary
     debugCompile 'com.squareup.leakcanary:leakcanary-android:1.5.4'
     releaseCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.5.4'
-    // Other
+    // Timber
     implementation 'com.jakewharton.timber:timber:4.6.0'
+    //Paper
+//    compile 'io.paperdb:paperdb:2.6'
+    compile 'com.github.pakoito:RxPaper2:1.2.0'
     // Testing
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
