--- a/app/build.gradle
+++ b/app/build.gradle
@@ -70,8 +70,8 @@ dependencies {
     // Timber
     implementation 'com.jakewharton.timber:timber:4.6.0'
     //Paper
-//    compile 'io.paperdb:paperdb:2.6'
-    compile 'com.github.pakoito:RxPaper2:1.2.0'
+    compile 'io.paperdb:paperdb:2.6'
+//    compile 'com.github.pakoito:RxPaper2:1.2.0'
     // Testing
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
